# flask-recipe-app

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  config.py  docker-compose.yml  mypy.ini  pyproject.toml
app/: __init__.py
app/models/: models.py
app/routes/: auth.py  recipe.py
app/templates/: base.html  index.html  login.html  recipe_form.html  recipe_view.html  recipes.html  register.html  unauthorized.html
migrations/: env.py
migrations/versions/: 45bc19fd14a3_initial_migration.py  7d915c89f7ab_changed_name_to_title_in_ingredients_.py  d0c7ae29c27a_changed_ingredients_column_and_.py  e66f6d7dfd5f_initial_migration.py
static/js/: add_recipe.js
tests/: test_auth.py  test_recipe.py
