[tool.poetry]
name = "flask-recipe-app"
version = "0.1.0"
description = ""
authors = ["Harshad <harshad.pawar87@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_recipe_app"}]

[tool.poetry.dependencies]
python = "^3.10 || ^3.11"
flask = "^3.0.2"
flask-login = "^0.6.3"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
werkzeug = "^3.0.2"
flask-wtf = "^1.2.1"
flask-testing = "^0.8.1"
black = "^24.3.0"
pylint = "^3.1.0"
isort = "^5.13.2"
types-flask-migrate = "^4.0.0.20240311"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
beautifulsoup4 = "^4.12.3"
mypy = "^1.9.0"
flake8 = "^7.0.0"
types-flask-sqlalchemy = "^2.5.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true


[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''